[gd_scene load_steps=8 format=3 uid="uid://y36yytk34v0i"]

[ext_resource type="Script" uid="uid://uy0xuironaam" path="res://scripts/characters/ais/ai.gd" id="1_6e7cc"]
[ext_resource type="PackedScene" uid="uid://cgic4q8egbmxp" path="res://scenes/characters/character_animation.tscn" id="2_vuvkh"]
[ext_resource type="Shader" uid="uid://cvbxmhb4epspt" path="res://assets/shaders/flash.gdshader" id="3_5xhut"]
[ext_resource type="Texture2D" uid="uid://c1ussrvj1xucu" path="res://assets/characters/ais/neuro_idle_sheet.png" id="3_a3wgx"]
[ext_resource type="Texture2D" uid="uid://bgwxn487mkwhh" path="res://assets/characters/ais/neuro_run_sheet.png" id="4_1chnv"]
[ext_resource type="PackedScene" uid="uid://cpp0tc7uqrv4" path="res://scenes/shared/hurtbox.tscn" id="5_bi4ec"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pvlob"]
resource_local_to_scene = true
shader = ExtResource("3_5xhut")
shader_parameter/white = false

[node name="AI" type="Node2D"]
script = ExtResource("1_6e7cc")

[node name="CharacterAnimation" parent="." node_paths=PackedStringArray("character") instance=ExtResource("2_vuvkh")]
position = Vector2(0, -13)
character = NodePath("..")

[node name="IdleSprite" parent="CharacterAnimation" index="0"]
material = SubResource("ShaderMaterial_pvlob")
texture = ExtResource("3_a3wgx")

[node name="RunSprite" parent="CharacterAnimation" index="1"]
material = SubResource("ShaderMaterial_pvlob")
texture = ExtResource("4_1chnv")

[node name="Hurtbox" parent="." instance=ExtResource("5_bi4ec")]
position = Vector2(0, -13)
collision_layer = 1

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Hurtbox"]
polygon = PackedVector2Array(-6, -1, -4, 13, 1, 13, 4, 9.05946, 4, -1)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="PathFindTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="SwitchTimer" type="Timer" parent="."]

[connection signal="take_damage" from="Hurtbox" to="." method="_on_hurtbox_take_damage"]
[connection signal="timeout" from="PathFindTimer" to="." method="_on_path_find_timer_timeout"]
[connection signal="timeout" from="SwitchTimer" to="." method="_on_switch_timer_timeout"]

[editable path="CharacterAnimation"]
[editable path="Hurtbox"]
